<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Appesca</string>
    <string name="title_formulario_detail">Formulario Detail</string>
    <string name="title_questao_list">Questões</string>
    <string name="title_questao_detail">Detalhamento de questões</string>
    <string name="title_activity_login_unesco">Appesca</string>

    <string name="titulo_activity_fcr">Formulário Camarão Regional</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">O endereço de email não é válido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>r
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"-"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="versaoAPP">Versão: 1.1.3 PROD</string>

    <string name="title_activity_tela_inicial_unesco_splash">TelaInicialUnescoSplashActivity
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="pular_bloco_5">Sim. Pular para o Bloco 5</string>
    <string name="nao_ir_proxima">Não. Apenas ir para próxima.</string>
    <string name="pular_bloco5_responsavel_familiar">Foi respondido que o entrevistado é responsável pela unidade familiar, deseja pular para o bloco 5?</string>
    <string name="pular_bloco_5_ocupacao_principal">Foi respondido que a principal ocupação no momento é Pescador(a) de camarão / Caranguejo, deseja pular para o bloco 5?</string>
    <string name="pular_bloco5_ocupacao">Foi respondido que uma das ocupações no momento é Pescador(a) de camarão / Caranguejo, deseja pular para o bloco 5?</string>


    <string name="button_start_record">Gravar</string>
    <string name="button_pause_record">Parar</string>
    <string name="button_play_record">Ouvir</string>
    <string name="button_clear_record">Excluir</string>
    <string name="error_audio_recorder">Audio recorder error: %1$s</string>
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="audio_db_artist_name">Suas gravações</string>
    <string name="audio_db_album_name">Gravadas</string>
    <string name="error_no_permissions">The recorder requires `RECORD_AUDIO` and `WRITE_EXTERNAL_STORAGE` permissions.</string>

</resources>
