<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">


    <!-- CONTAINER GERAL -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/layout_questao">

        <!-- TITULO -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/layout_titulo_questao">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="Bloco 9 - Questão 1"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:textAppearance="@style/style_questao"
                        android:text="De maneira geral, quais são os principais problemas enfrentados? Quais seriam as soluções? (gravação 5 minutos)"/>


                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:textAppearance="@style/style_questao"
                                    android:gravity="center"
                                    android:text="Problemas"/>
                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/perg1_et_resp1"
                                    android:lines="4"
                                    android:textAppearance="@style/style_resposta"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:textAppearance="@style/style_questao"
                                    android:gravity="center"
                                    android:text="Soluções"/>



                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/perg1_et_resp2"
                                    android:lines="4"
                                    android:textAppearance="@style/style_resposta"/>


                <ImageView
                    android:id="@+id/image_cassette"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"

                    android:src="@drawable/image_cassette"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Nome do arquivo:"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/txtNomeArquivo"
                        android:text="-"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Tempo gravação:"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/txtTempoGravacao"
                        android:text="-"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonStartRecording"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/button_start_record"/>

                    <Button
                        android:id="@+id/buttonPauseRecording"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/button_pause_record"/>

                    <Button
                        android:id="@+id/buttonPlayRecording"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/button_play_record"/>


                    <Button
                        android:id="@+id/buttonClearRecording"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/button_clear_record"/>
                </LinearLayout>




            </LinearLayout>


    </LinearLayout>
</ScrollView>